// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Has default route 1`] = `
<App
  blogHero={null}
  markdown={Object {}}
  plugins={Object {}}
  searchIndex={Array []}
/>
`;

exports[`sets first page and root from index file 1`] = `
<App
  blogHero={null}
  markdown={
    Object {
      "/foo/bar": [Function],
      "indexFiles": Object {
        "/foo/bar": "/first/page",
      },
    }
  }
  plugins={Object {}}
  searchIndex={Array []}
/>
`;

exports[`update markdown provided 1`] = `
<App
  blogHero={null}
  markdown={
    Object {
      "/foo/bar": [Function],
    }
  }
  plugins={Object {}}
  searchIndex={Array []}
/>
`;

exports[`uses plugins 1`] = `
<App
  blogHero={null}
  markdown={
    Object {
      "/foo/bar": [Function],
      "indexFiles": Object {
        "/foo/bar": "/first/page",
      },
    }
  }
  plugins={
    Object {
      "test": Object {
        "component": [Function],
        "name": "test",
        "options": null,
        "provider": [Function],
      },
    }
  }
  searchIndex={Array []}
/>
`;
